# typeshift_solver

./: Cargo.toml  README.md
benches/: sample_puzzles.rs
files/puzzles/: 2023-11-16.txt  2023-11-17.txt  2023-11-18.txt  2023-11-19.txt  2023-11-20.txt  2023-11-21.txt  2023-11-22.txt  2023-11-23.txt  2023-11-24.txt  2023-11-25.txt  2023-11-26.txt  2023-11-27.txt  2023-11-28.txt  2023-11-29.txt  2023-11-30.txt  2023-12-01.txt  2023-12-05.txt
src/: dict.rs  index.rs  lib.rs  main.rs  typeshift.rs
src/typeshift/: collections.rs
tests/: puzzle_snapshots.rs
tests/snapshots/: puzzle_snapshots__puzzle_snapshots@2023-11-16.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-17.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-18.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-19.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-20.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-21.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-22.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-23.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-24.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-25.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-26.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-27.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-28.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-29.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-11-30.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-12-01.txt.snap  puzzle_snapshots__puzzle_snapshots@2023-12-05.txt.snap
