[package]
name = "typeshift_solver"
version = "0.1.0"
edition = "2021"
default-run = "typeshift_solver"

[dependencies]

[dev-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
insta = { version = "1.34.0", features = ["yaml", "glob"] }
pretty_assertions = "1.4.0"

[profile.dev.package."*"]
opt-level = 3

